Resolvido bug do procurar de empregado e menu

--- a/project/src/main/resources/templates/editmenu.html
+++ b/project/src/main/resources/templates/editmenu.html
@@ -30,8 +30,8 @@
               <span th:if="${parametros['categoria']} != 'bebida'">
                   <option value="bebida">Bebida</option>
               </span>
-              <span th:if="${parametros['categoria']} != 'sobremessa'">
-                  <option value="sobremessa">Sobremessa</option>
+              <span th:if="${parametros['categoria']} != 'sobremesa'">
+                  <option value="sobremesa">Sobremesa</option>
               </span>
             </select>
           </div>
