--- a/project/src/main/resources/templates/introduzir_menu.html
+++ b/project/src/main/resources/templates/introduzir_menu.html
@@ -22,7 +22,7 @@
                 <option value="entrada">Entrada</option>
                 <option value="prato principal">Prato Principal</option>
                 <option value="bebida">Bebida</option>
-                <option value="sobremessa">Sobremessa</option>
+                <option value="sobremesa">Sobremesa</option>
               </select>
             </div>
 
