--- a/project/src/main/resources/templates/listar_pratos_e_empregados.html
+++ b/project/src/main/resources/templates/listar_pratos_e_empregados.html
@@ -43,7 +43,7 @@ $(document).ready(function(){
 									<td>
 									<div th:text="${parametros.categoria}">
 									</div></td>
-									<td class="maxme" th:text="${parametros.ingridiente}"></td>
+									<td class="maxme" th:text="${parametros.ingrediente}"></td>
 								<!--	<td th:text="${param.tipo}"></td> -->
 									<td>
 
@@ -83,7 +83,7 @@ $(document).ready(function(){
 					</div>
 
 
-          
+
           		<div class="row">
           			<div class="col-lg-12">
           				<div class="table-responsive table--no-card m-b-30">
