--- a/project/src/main/resources/templates/introduzir_rest.html
+++ b/project/src/main/resources/templates/introduzir_rest.html
@@ -79,7 +79,7 @@
                 <option value=""></option>
                 <option value="Comida Portuguesa">Comida Portuguesa</option>
                 <option value="Chines">Chinês</option>
-                <option value="Japones">Japonoês</option>
+                <option value="Japones">Japonês</option>
                 <option value="Indiano">Indiano</option>
                 <option value="Italiano">Italiano</option>
               </select>
