--- a/project/src/main/resources/templates/login.html
+++ b/project/src/main/resources/templates/login.html
@@ -64,27 +64,19 @@ if (ver == "fail") {
                     <div class="login-content">
                         <div class="login-logo">
                             <a href="#">
-                                <img src="images/icon/logo.png" alt="CoolAdmin">
+                                <img src="images/icon/logo_final.png">
                             </a>
                         </div>
                         <div class="login-form">
 
                             <form action="/painel_admin" method="post">
                                 <div class="form-group">
-                                    <label>Email Address</label>
+                                    <label>Username</label>
                                     <input class="au-input au-input--full" type="text" name="username" placeholder="Username:" required>
                                 </div>
                                 <div class="form-group">
                                     <label>Password</label>
                                     <input class="au-input au-input--full" type="password" name="password" placeholder="Password:" required>
-                                </div>
-                                <div class="login-checkbox">
-                                    <label>
-                                        <input type="checkbox" name="remember">Remember Me
-                                    </label>
-                                    <label>
-                                        <a href="#">Forgotten Password?</a>
-                                    </label>
                                 </div>
                                 <button class="au-btn au-btn--block au-btn--green m-b-20" type="submit">Entrar</button>
 
@@ -112,13 +104,6 @@ if (ver == "fail") {
                                 </div>
                               </form> -->
 
-
-                            <div class="register-link">
-                                <p>
-                                    Don't you have account?
-                                    <a href="#">Sign Up Here</a>
-                                </p>
-                            </div>
                         </div>
                     </div>
                 </div>
