--- a/project/src/main/resources/templates/main.html
+++ b/project/src/main/resources/templates/main.html
@@ -152,7 +152,7 @@
                 <div class="container-fluid">
                     <div class="header-mobile-inner">
                         <a class="logo" href="index.html">
-                            <img src="images/icon/logo.png" alt="CoolAdmin" />
+                            <img src="images/icon/logoletras.png" />
                         </a>
                         <button class="hamburger hamburger--slider" type="button">
                             <span class="hamburger-box">
@@ -262,7 +262,7 @@
         <aside class="menu-sidebar d-none d-lg-block">
             <div class="logo">
                 <a href="http://18.222.203.109:6997/inicio?fragment=painel_admin">
-                    <img src="images/icon/logo.png" alt="Cool Admin" />
+                    <img src="images/icon/logoletras.png"/>
                 </a>
             </div>
             <div class="menu-sidebar__content js-scrollbar1">
@@ -447,10 +447,6 @@
                                                       </div>
                                                     </form> -->
 
-                                                </div>
-                                                <div class="account-dropdown__item">
-                                                    <a href="#">
-                                                        <i class="zmdi zmdi-settings"></i>Setting</a>
                                                 </div>
                                             </div>
                                             <div class="account-dropdown__footer">
