resolvidos bugs em principio, hopefully

--- a/project/src/main/resources/templates/listar_pratos_e_empregados.html
+++ b/project/src/main/resources/templates/listar_pratos_e_empregados.html
@@ -67,7 +67,7 @@ $(document).ready(function(){
 											<div class="fa-hover col-lg-3 col-md-6">
 											<button type="submit">
 
-											<i class="fa fa-trash-o" style="font-size:25px;"></i>
+											<i class="fa fa-pencil" style="font-size:25px;"></i>
 
 											</button>
 										</div>
@@ -123,12 +123,12 @@ $(document).ready(function(){
           							</td>
 
           								<td style="width:40%; text-align:center; vertical-align:middle;">
-          							<form action="/editar_utilizadores?fragment=editar_utilizadores" method="post">
+          							<form action="/editar_empregados?fragment=editar_empregados" method="post">
           								<input class="form-control" name="id" type="hidden" th:value="${parametros.id}"> <!-- Mandar o id para o editar -->
           										<div class="fa-hover col-lg-3 col-md-6">
           										<button type="submit">
 
-          										<i class="fa fa-trash-o" style="font-size:25px;"></i>
+          										<i class="fa fa-pencil" style="font-size:25px;"></i>
 
           										</button>
           									</div>
