--- a/project/src/main/resources/templates/listpedidopf.html
+++ b/project/src/main/resources/templates/listpedidopf.html
@@ -38,7 +38,6 @@ $(document).ready(function(){
 						<thead>
 							<tr>
 								<th>Nome</th>
-								<th>Tipo</th>
 								<th style="text-align:center;">Ver Pedido</th>
 							</tr>
 
@@ -118,7 +117,6 @@ $(document).ready(function(){
 
 	</thead>
 			<tbody th:each="parametros : ${userorder}">
-
 		<tr>
 			<td th:text="${parametros.nome}"></td>
 
@@ -130,32 +128,27 @@ $(document).ready(function(){
 				<p th:case="'reservar'">Reserva</p>
 			</div></td> -->
 		<!--	<td th:text="${param.tipo}"></td> -->
-			<td>
-
-
 
 			<td style="width:40%; text-align:center; vertical-align:middle;">
 		<form action="/orderacept?fragment=orderacept" method="post">
+      <span th:each="order : ${ordertype}">
 			<input class="form-control" name="id" type="hidden" th:value="${parametros.id}"> <!-- Mandar o id para o editar -->
+        <input class="form-control" name="ordertype" type="hidden" th:value="${order}">
 					<div class="fa-hover col-lg-3 col-md-6">
 					<button type="submit">
 
-					<i class="fa fa-trash-o" style="font-size:25px;"></i>
+					<i class="fa fa-pencil" style="font-size:25px;"></i>
 
 					</button>
 				</div>
+        </span>
 			</form>
 
 			</td>
-		</tr>
 
 		</tr>
 
 	</tbody>
-
-
-
-						</thead>
 
 
 					</table>
