--- a/project/src/main/resources/templates/introduzir_empregados.html
+++ b/project/src/main/resources/templates/introduzir_empregados.html
@@ -39,6 +39,10 @@
                 </select>
             </div>
         </div>
+        <div class="form-group">
+        <label for="exampleInputFile">Explorar...</label>
+        <input class="form-control-file" aria-describedby="fileHelp" type="file" name="files" multiple>
+        </div>
           <button type="submit" class="btn btn-primary">Adicionar</button>
         </form>
 
