--- a/project/src/main/resources/templates/listar_mensagensowner.html
+++ b/project/src/main/resources/templates/listar_mensagensowner.html
@@ -1,4 +1,4 @@
-<div th:fragment="listar_mens_frag">
+<div th:fragment="listar_menso_frag">
 
     <div class="section__content section__content--p30">
       <div class="container-fluid">
