--- a/project/src/main/resources/templates/listar_menu.html
+++ b/project/src/main/resources/templates/listar_menu.html
@@ -67,7 +67,7 @@ $(document).ready(function(){
 											<div class="fa-hover col-lg-3 col-md-6">
 											<button type="submit">
 
-											<i class="fa fa-trash-o" style="font-size:25px;"></i>
+											<i class="fa fa-pencil" style="font-size:25px;"></i>
 
 											</button>
 										</div>
