--- a/project/src/main/resources/templates/mainempprofile.html
+++ b/project/src/main/resources/templates/mainempprofile.html
@@ -203,7 +203,7 @@
                     <div class="container-fluid">
                         <div class="header-wrap">
                             <form class="form-header" action="/pesqe" method="post">
-                                <input class="au-input au-input--xl" type="text" name="search" placeholder="Nome de restaurantes e utilizadores..." />
+                                <input class="au-input au-input--xl" type="text" name="search" placeholder="Nome de de pedidos e menus..." />
                                 <button class="au-btn--submit" type="submit">
                                     <i class="zmdi zmdi-search"></i>
                                 </button>
