--- a/project/src/main/resources/templates/mainownerprofile.html
+++ b/project/src/main/resources/templates/mainownerprofile.html
@@ -89,60 +89,7 @@
                             <a href="map.html">
                                 <i class="fas fa-map-marker-alt"></i>Maps</a>
                         </li>
-                        <li class="has-sub">
-                            <a class="js-arrow" href="#">
-                                <i class="fas fa-copy"></i>Pages</a>
-                            <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
-                                <li>
-                                    <a href="login.html">Login1</a>
-                                </li>
-                                <li>
-                                    <a href="register.html">Register</a>
-                                </li>
-                                <li>
-                                    <a href="forget-pass.html">Forget Password</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="has-sub">
-                            <a class="js-arrow" href="#">
-                                <i class="fas fa-desktop"></i>UI Elements</a>
-                            <ul class="navbar-mobile-sub__list list-unstyled js-sub-list">
-                                <li>
-                                    <a href="button.html">Button</a>
-                                </li>
-                                <li>
-                                    <a href="badge.html">Badges</a>
-                                </li>
-                                <li>
-                                    <a href="tab.html">Tabs</a>
-                                </li>
-                                <li>
-                                    <a href="card.html">Cards</a>
-                                </li>
-                                <li>
-                                    <a href="alert.html">Alerts</a>
-                                </li>
-                                <li>
-                                    <a href="progress-bar.html">Progress Bars</a>
-                                </li>
-                                <li>
-                                    <a href="modal.html">Modals</a>
-                                </li>
-                                <li>
-                                    <a href="switch.html">Switchs</a>
-                                </li>
-                                <li>
-                                    <a href="grid.html">Grids</a>
-                                </li>
-                                <li>
-                                    <a href="fontawesome.html">Fontawesome Icon</a>
-                                </li>
-                                <li>
-                                    <a href="typo.html">Typography</a>
-                                </li>
-                            </ul>
-                        </li>
+
                     </ul>
                 </div>
             </nav>
@@ -162,7 +109,7 @@
                     <ul class="list-unstyled navbar__list">
                         <li class="active has-sub">
                             <a class="js-arrow" href="#">
-                                <i class="fas fa-tachometer-alt"></i>Menu</a>
+                                <i class="fas fa-utensils"></i>Menu</a>
                             <ul class="list-unstyled navbar__sub-list js-sub-list">
                                 <li>
                                     <a href="/addmenu?fragment=introduzir_menu">Introduzir Menu</a> <!-- introduzir_restaurante o modelo, introduzir_rest é o html -->
@@ -174,7 +121,7 @@
                         </li>
                         <li class="active has-sub">
                             <a class="js-arrow" href="#">
-                                <i class="fas fa-tachometer-alt"></i>Gestão de Empregados</a>
+                                <i class="fa fa-users"></i>Gestão de Empregados</a>
                             <ul class="list-unstyled navbar__sub-list js-sub-list">
                                 <li>
                                     <a href="/addemp?fragment=introduzir_empregados">Introduzir</a>
@@ -190,13 +137,13 @@
 
                         <li class="active has-sub">
                             <a class="js-arrow" href="#">
-                                <i class="fas fa-tachometer-alt"></i>Contacto</a>
+                                <i class="fa fa-envelope"></i>Contacto</a>
                             <ul class="list-unstyled navbar__sub-list js-sub-list">
                                 <li>
                                     <a href="/nova_mensagem?fragment=criar_mensagem">Contactar Admistradores</a>
                                 </li>
                                 <li>
-                                    <a href="/caixa_entrada?fragment=lista_mensagens">Listar Mensagens</a>
+                                    <a href="/caixa_entrada?fragment=lista_mensagenns">Listar Mensagens</a>
                                 </li>
                                 <li>
                                 <!--    <a href="/listaremp?fragment=listar_emp">Listagem</a>   href="../school/create-division.html"
@@ -205,82 +152,6 @@
                             </ul>
                         </li>
 
-                        <li>
-                            <a href="/lista_users_app?fragment=listagem_users">
-                                <i class="far fa-check-square"></i>Usuários da Aplicação</a>
-                        </li>
-
-                        <li>
-                            <a href="/nova_mensagem?fragment=mensagens">
-                                <i class="far fa-check-square"></i>Caixa de Entrada</a>
-                        </li>
-
-                        <li>
-                            <a href="form.html">
-                                <i class="far fa-check-square"></i>Forms</a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fas fa-calendar-alt"></i>Calendar</a>
-                        </li>
-                        <li>
-                            <a href="map.html">
-                                <i class="fas fa-map-marker-alt"></i>Maps</a>
-                        </li>
-                        <li class="has-sub">
-                            <a class="js-arrow" href="#">
-                                <i class="fas fa-copy"></i>Pages</a>
-                            <ul class="list-unstyled navbar__sub-list js-sub-list">
-                                <li>
-                                    <a href="/login">Login2</a>
-                                </li>
-                                <li>
-                    <!--                <a href="http://localhost:8080/registar">Registar</a> -->
-                                </li>
-                                <li>
-                                    <a href="forget-pass.html">Forget Password</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="has-sub">
-                            <a class="js-arrow" href="#">
-                                <i class="fas fa-desktop"></i>UI Elements</a>
-                            <ul class="list-unstyled navbar__sub-list js-sub-list">
-                                <li>
-                                    <a href="button.html">Button</a>
-                                </li>
-                                <li>
-                                    <a href="badge.html">Badges</a>
-                                </li>
-                                <li>
-                                    <a href="tab.html">Tabs</a>
-                                </li>
-                                <li>
-                                    <a href="card.html">Cards</a>
-                                </li>
-                                <li>
-                                    <a href="alert.html">Alerts</a>
-                                </li>
-                                <li>
-                                    <a href="progress-bar.html">Progress Bars</a>
-                                </li>
-                                <li>
-                                    <a href="modal.html">Modals</a>
-                                </li>
-                                <li>
-                                    <a href="switch.html">Switchs</a>
-                                </li>
-                                <li>
-                                    <a href="grid.html">Grids</a>
-                                </li>
-                                <li>
-                                    <a href="fontawesome.html">Fontawesome Icon</a>
-                                </li>
-                                <li>
-                                    <a href="typo.html">Typography</a>
-                                </li>
-                            </ul>
-                        </li>
                     </ul>
                 </nav>
             </div>
@@ -416,8 +287,8 @@
                   <span th:include="nova_mensagem::nova_mensagem_frag"> </span>
                 </div>
 
-                <div th:case="lista_mensagens">
-                  <span th:include="listar_mensagens::listar_mens_frag"> </span>
+                <div th:case="lista_mensagenns">
+                  <span th:include="listar_mensagensowner::listar_menso_frag"> </span>
                 </div>
 
                 <div th:case="enviar_mensagem">
