--- a/project/src/main/resources/templates/introduzir_menu.html
+++ b/project/src/main/resources/templates/introduzir_menu.html
@@ -13,7 +13,7 @@
             </div>
             <div class="form-group">
               <label for="exampleInputEmail1">Ingridientes:</label>
-              <input class="form-control" placeholder="-045677897" name="ingridiente" type="text" required>
+              <input class="form-control" placeholder="-045677897" name="ingrediente" type="text" required>
             </div>
             <div class="form-group">
               <label for="exampleSelect1">Categoria</label>
